{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Movement",
            "id": "02f294a1-8d54-41d2-b66b-08720b734157",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "35ad459c-6f87-46e1-b321-9092908d81be",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Value",
                    "id": "73f54522-746e-4ab3-b9a9-89e7e5bf7039",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Crouch",
                    "type": "Button",
                    "id": "044e43f3-4394-4766-a4d2-f2b6ce501226",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "StandUp",
                    "type": "Button",
                    "id": "5971f864-8f58-4066-a158-e254d59347d4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "6b4008d7-cf7a-4e2e-8e22-162c9f860c6e",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "893dd4e6-3d8d-4049-bd7a-84f9a9db4384",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "04b57bba-dcd8-443c-9814-2a0adfd9b9aa",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "618998a2-1802-4059-a3cd-d63889ecae90",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aa4c2364-93f1-4282-88ec-9cd00b525ecf",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "96333148-f8b7-47ca-910f-731c43acaa6a",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StandUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}